// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finances getServiceStatus returns a parsed model when the status response is valid 1`] = `
Array [
  Object {
    "Status": "GREEN",
    "Timestamp": "2020-05-06T08:22:23.582Z",
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`finances listFinancialEventGroups returns a next token and financial event groups list if succesful 1`] = `
Array [
  Object {
    "FinancialEventGroupList": Array [
      Object {
        "AccountTail": "1212",
        "BeginningBalance": Object {
          "CurrencyCode": "USD",
        },
        "ConvertedTotal": Object {
          "CurrencyCode": "USD",
        },
        "FinancialEventGroupEnd": 2014-09-09T07:30:00.000Z,
        "FinancialEventGroupId": "22YgYW55IGNhcm5hbCBwbGVhEXAMPLE",
        "FinancialEventGroupStart": 2014-09-01T07:30:00.000Z,
        "FundTransferDate": 2014-09-09T07:30:00.000Z,
        "FundTransferStatus": "Successful",
        "OriginalTotal": Object {
          "CurrencyCode": "USD",
        },
        "ProcessingStatus": "Closed",
        "TraceId": "128311029381HSADJEXAMPLE",
      },
    ],
    "NextToken": NextToken {
      "action": "ListFinancialEventGroups",
      "token": "2YgYW55IGNhcm5hbCBwbGVhcEXAMPLE",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`finances listFinancialEventGroupsByNextToken returns a next token and financial event groups list if succesful 1`] = `
Array [
  Object {
    "FinancialEventGroupList": Array [
      Object {
        "AccountTail": "1212",
        "BeginningBalance": Object {
          "CurrencyCode": "USD",
        },
        "ConvertedTotal": Object {
          "CurrencyCode": "USD",
        },
        "FinancialEventGroupEnd": 2014-09-09T07:30:00.000Z,
        "FinancialEventGroupId": "22YgYW55IGNhcm5hbCBwbGVhEXAMPLE",
        "FinancialEventGroupStart": 2014-09-01T07:30:00.000Z,
        "FundTransferDate": 2014-09-09T07:30:00.000Z,
        "FundTransferStatus": "Successful",
        "OriginalTotal": Object {
          "CurrencyCode": "USD",
        },
        "ProcessingStatus": "Closed",
        "TraceId": "128311029381HSADJEXAMPLE",
      },
    ],
    "NextToken": NextToken {
      "action": "ListFinancialEventGroups",
      "token": "2YgYW55IGNhcm5hbCBwbGVhcEXAMPLE",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`finances listFinancialEvents returns a next token and financial events list if succesful 1`] = `
Array [
  Object {
    "FinancialEvents": Object {
      "AdjustmentEventList": Array [],
      "AffordabilityExpenseEventList": Array [
        Object {
          "AmazonOrderId": "931-2463294-5740665",
          "BaseExpense": Object {
            "CurrencyAmount": -100,
            "CurrencyCode": "INR",
          },
          "MarketplaceId": "A2XZLSVIQ0F4JT",
          "PostedDate": 2018-02-08T13:17:15.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": -18,
            "CurrencyCode": "INR",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TotalExpense": Object {
            "CurrencyAmount": -118,
            "CurrencyCode": "INR",
          },
          "TransactionType": "Charge",
        },
      ],
      "AffordabilityExpenseReversalEventList": Array [
        Object {
          "AmazonOrderId": "931-2463294-5740665",
          "BaseExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "INR",
          },
          "MarketplaceId": "A2XZLSVIQ0F4JT",
          "PostedDate": 2018-02-08T13:17:15.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": 18,
            "CurrencyCode": "INR",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TotalExpense": Object {
            "CurrencyAmount": 118,
            "CurrencyCode": "INR",
          },
          "TransactionType": "Refund",
        },
      ],
      "ChargebackEventList": Array [],
      "DebtRecoveryEventList": Array [],
      "GuaranteeClaimEventList": Array [],
      "LoanServicingEventList": Array [],
      "PayWithAmazonEventList": Array [],
      "PerformanceBondRefundEventList": Array [],
      "ProductAdsPaymentEventList": Array [
        Object {
          "baseValue": Object {
            "CurrencyAmount": 115.34,
            "CurrencyCode": "USD",
          },
          "invoiceId": "TR1W0B4YB-6",
          "taxValue": Object {
            "CurrencyAmount": 21.91,
            "CurrencyCode": "USD",
          },
          "transactionType": "Charge",
          "transactionValue": Object {
            "CurrencyAmount": 137.25,
            "CurrencyCode": "USD",
          },
        },
      ],
      "RefundEventList": Array [],
      "RentalTransactionEventList": Array [],
      "RetrochargeEventList": Array [],
      "ServiceFeeEventList": Array [],
      "ServiceProviderCreditEventList": Array [],
      "ShipmentEventList": Array [
        Object {
          "AmazonOrderId": "105-0457358-1245022",
          "MarketplaceName": "Amazon.com",
          "PostedDate": 2017-01-23T01:31:25.000Z,
          "SellerOrderId": "105-0457358-1245022",
          "ShipmentItemList": Array [
            Object {
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 25.99,
                    "CurrencyCode": "USD",
                  },
                  "ChargeType": "Principal",
                },
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 0,
                    "CurrencyCode": "USD",
                  },
                  "ChargeType": "Tax",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 0,
                    "CurrencyCode": "USD",
                  },
                  "FeeType": "ShippingChargeback",
                },
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 0,
                    "CurrencyCode": "USD",
                  },
                  "FeeType": "VariableClosingFee",
                },
              ],
              "OrderItemId": "46432915698730",
              "QuantityShipped": 1,
              "SellerSKU": "HS223A-C00",
            },
          ],
        },
      ],
      "TDSReimbursementEventList": Array [
        Object {
          "PostedDate": 2019-08-01T16:18:15.000Z,
          "ReimbursedAmount": Object {
            "CurrencyAmount": 3.98,
            "CurrencyCode": "INR",
          },
          "TdsOrderId": "TDS-1235",
        },
      ],
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`finances listFinancialEvents succesfully decodes the full response of ListFinancialEvents 1`] = `
Array [
  Object {
    "FinancialEvents": Object {
      "AdjustmentEventList": Array [
        Object {
          "AdjustmentAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "AdjustmentItemList": Array [
            Object {
              "ASIN": "String",
              "FnSKU": "String",
              "PerUnitAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ProductDescription": "String",
              "Quantity": "String",
              "SellerSKU": "String",
              "TotalAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
            },
          ],
          "AdjustmentType": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
        },
      ],
      "AffordabilityExpenseEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "BaseExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "MarketplaceId": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TotalExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TransactionType": "String",
        },
      ],
      "AffordabilityExpenseReversalEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "BaseExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "MarketplaceId": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TotalExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TransactionType": "String",
        },
      ],
      "ChargebackEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "DirectPaymentList": Array [
            Object {
              "DirectPaymentAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "DirectPaymentType": "String",
            },
          ],
          "MarketplaceName": "String",
          "OrderChargeAdjustmentList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderChargeList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "OrderFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SellerOrderId": "String",
          "ShipmentFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentItemAdjustmentList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
          "ShipmentItemList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
        },
      ],
      "CouponPaymentEventList": Array [
        Object {
          "ChargeComponent": Object {
            "ChargeAmount": Object {
              "CurrencyAmount": 100,
              "CurrencyCode": "String",
            },
            "ChargeType": "String",
          },
          "ClipOrRedemptionCount": 1,
          "CouponId": "String",
          "FeeComponent": Object {
            "FeeAmount": Object {
              "CurrencyAmount": 100,
              "CurrencyCode": "String",
            },
            "FeeType": "String",
          },
          "PaymentEventId": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SellerCouponDescription": "String",
          "TotalAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
        },
      ],
      "DebtRecoveryEventList": Array [
        Object {
          "ChargeInstrumentList": Array [
            Object {
              "Amount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "Description": "String",
              "Tail": "String",
            },
          ],
          "DebtRecoveryItemList": Array [
            Object {
              "GroupBeginDate": 1969-07-21T02:56:03.000Z,
              "GroupEndDate": 1969-07-21T02:56:03.000Z,
              "OriginalAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "RecoveryAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
            },
          ],
          "DebtRecoveryType": "String",
          "OverPaymentCredit": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "RecoveryAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
        },
      ],
      "FBALiquidationEventList": Array [
        Object {
          "LiquidationFeeAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "LiquidationProceedsAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "OriginalRemovalOrderId": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
        },
      ],
      "GuaranteeClaimEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "DirectPaymentList": Array [
            Object {
              "DirectPaymentAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "DirectPaymentType": "String",
            },
          ],
          "MarketplaceName": "String",
          "OrderChargeAdjustmentList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderChargeList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "OrderFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SellerOrderId": "String",
          "ShipmentFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentItemAdjustmentList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
          "ShipmentItemList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
        },
      ],
      "ImagingServicesFeeEventList": Array [
        Object {
          "ASIN": "String",
          "FeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ImagingRequestBillingItemID": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
        },
      ],
      "LoanServicingEventList": Array [
        Object {
          "LoanAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "SourceBusinessEventType": "String",
        },
      ],
      "NetworkComminglingTransactionEventList": Array [
        Object {
          "ASIN": "String",
          "MarketplaceId": "String",
          "NetCoTransactionID": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SwapReason": "String",
          "TaxAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TaxExclusiveAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TransactionType": "String",
        },
      ],
      "PayWithAmazonEventList": Array [
        Object {
          "AmountDescription": "String",
          "BusinessObjectType": "String",
          "Charge": Object {
            "ChargeAmount": Object {
              "CurrencyAmount": 100,
              "CurrencyCode": "String",
            },
            "ChargeType": "String",
          },
          "FeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "FulfillmentChannel": "String",
          "PaymentAmountType": "String",
          "SalesChannel": "String",
          "SellerOrderId": "String",
          "StoreName": "String",
          "TransactionPostedDate": 1969-07-21T02:56:03.000Z,
        },
      ],
      "PerformanceBondRefundEventList": Array [
        Object {
          "Amount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "MarketplaceCountryCode": "String",
          "ProductGroupList": Object {
            "ProductGroup": "String",
          },
        },
      ],
      "ProductAdsPaymentEventList": Array [
        Object {
          "baseValue": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "invoiceId": "String",
          "postedDate": 1969-07-21T02:56:03.000Z,
          "taxValue": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "transactionType": "String",
          "transactionValue": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
        },
      ],
      "RefundEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "DirectPaymentList": Array [
            Object {
              "DirectPaymentAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "DirectPaymentType": "String",
            },
          ],
          "MarketplaceName": "String",
          "OrderChargeAdjustmentList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderChargeList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "OrderFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SellerOrderId": "String",
          "ShipmentFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentItemAdjustmentList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
          "ShipmentItemList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
        },
      ],
      "RentalTransactionEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "ExtensionLength": 1,
          "MarketplaceName": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "RentalChargeList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "RentalEventType": "String",
          "RentalFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "RentalInitialValue": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "RentalReimbursement": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "RentalTaxWithheldList": Object {},
        },
      ],
      "RetrochargeEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "BaseTax": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "MarketplaceName": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "RetrochargeEventType": "String",
          "ShippingTax": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
        },
      ],
      "SAFETReimbursementEventList": Array [
        Object {
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "ReimbursedAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "SAFETClaimId": "String",
          "SAFETReimbursementItemList": Array [
            Object {},
          ],
        },
      ],
      "SellerReviewEnrollmentPaymentEventList": Array [
        Object {
          "ChargeComponent": Object {
            "ChargeAmount": Object {
              "CurrencyAmount": 100,
              "CurrencyCode": "String",
            },
            "ChargeType": "String",
          },
          "EnrollmentId": "String",
          "FeeComponent": Object {
            "FeeAmount": Object {
              "CurrencyAmount": 100,
              "CurrencyCode": "String",
            },
            "FeeType": "String",
          },
          "ParentASIN": "String",
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "TotalAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
        },
      ],
      "ServiceFeeEventList": Array [
        Object {
          "ASIN": "String",
          "AmazonOrderId": "String",
          "FeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "FeeReason": "String",
          "FnSKU": "String",
          "SellerSKU": "String",
        },
      ],
      "ServiceProviderCreditEventList": Array [
        Object {
          "MarketplaceCountryCode": "String",
          "MarketplaceId": "String",
          "ProviderId": "String",
          "ProviderStoreName": "String",
          "ProviderTransactionType": "String",
          "SellerId": "String",
          "SellerOrderId": "String",
          "SellerStoreName": "String",
        },
      ],
      "ShipmentEventList": Array [
        Object {
          "AmazonOrderId": "String",
          "DirectPaymentList": Array [
            Object {
              "DirectPaymentAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "DirectPaymentType": "String",
            },
          ],
          "MarketplaceName": "String",
          "OrderChargeAdjustmentList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderChargeList": Array [
            Object {
              "ChargeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ChargeType": "String",
            },
          ],
          "OrderFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "OrderFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "SellerOrderId": "String",
          "ShipmentFeeAdjustmentList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentFeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "FeeType": "String",
            },
          ],
          "ShipmentItemAdjustmentList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
          "ShipmentItemList": Array [
            Object {
              "CostOfPointsGranted": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "CostOfPointsReturned": Object {
                "CurrencyAmount": 100,
                "CurrencyCode": "String",
              },
              "ItemChargeAdjustmentList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemChargeList": Array [
                Object {
                  "ChargeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "ChargeType": "String",
                },
              ],
              "ItemFeeAdjustmentList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemFeeList": Array [
                Object {
                  "FeeAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "FeeType": "String",
                },
              ],
              "ItemTaxWithheldList": Array [
                Object {
                  "TaxCollectionModel": "String",
                  "TaxesWithheld": Array [
                    Object {
                      "ChargeAmount": Object {
                        "CurrencyAmount": 100,
                        "CurrencyCode": "String",
                      },
                      "ChargeType": "String",
                    },
                  ],
                },
              ],
              "OrderAdjustmentItemId": "String",
              "OrderItemId": "String",
              "PromotionAdjustmentList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "PromotionList": Array [
                Object {
                  "PromotionAmount": Object {
                    "CurrencyAmount": 100,
                    "CurrencyCode": "String",
                  },
                  "PromotionId": "String",
                  "PromotionType": "String",
                },
              ],
              "QuantityShipped": 1,
              "SellerSKU": "String",
            },
          ],
        },
      ],
      "TDSReimbursementEventList": Array [
        Object {
          "PostedDate": 1969-07-21T02:56:03.000Z,
          "ReimbursedAmount": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "String",
          },
          "TdsOrderId": "String",
        },
      ],
    },
    "NextToken": NextToken {
      "action": "ListFinancialEvents",
      "token": "String",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;

exports[`finances listFinancialEventsByNextToken returns a next token and financial events list if succesful 1`] = `
Array [
  Object {
    "FinancialEvents": Object {
      "AdjustmentEventList": Array [
        Object {
          "AdjustmentItemList": Array [
            Object {
              "PerUnitAmount": Object {
                "CurrencyAmount": 3.38,
                "CurrencyCode": "USD",
              },
              "ProductDescription": "Shacke Metal Shoe Horn 7.5&quot; inches - Double Sided Stainless
                Steel (Silver)",
              "Quantity": "1",
              "SellerSKU": "KL-BPYA-C1VH",
              "TotalAmount": Object {
                "CurrencyAmount": 3.38,
                "CurrencyCode": "USD",
              },
            },
          ],
          "AdjustmentType": "ReserveEvent",
        },
      ],
      "AffordabilityExpenseEventList": Array [
        Object {
          "AmazonOrderId": "931-2463294-5740665",
          "BaseExpense": Object {
            "CurrencyAmount": -100,
            "CurrencyCode": "INR",
          },
          "MarketplaceId": "A2XZLSVIQ0F4JT",
          "PostedDate": 2018-02-08T13:17:15.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": -18,
            "CurrencyCode": "INR",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TotalExpense": Object {
            "CurrencyAmount": -118,
            "CurrencyCode": "INR",
          },
          "TransactionType": "Charge",
        },
      ],
      "AffordabilityExpenseReversalEventList": Array [
        Object {
          "AmazonOrderId": "931-2463294-5740665",
          "BaseExpense": Object {
            "CurrencyAmount": 100,
            "CurrencyCode": "INR",
          },
          "MarketplaceId": "A2XZLSVIQ0F4JT",
          "PostedDate": 2018-02-08T13:17:15.000Z,
          "TaxTypeCGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TaxTypeIGST": Object {
            "CurrencyAmount": 18,
            "CurrencyCode": "INR",
          },
          "TaxTypeSGST": Object {
            "CurrencyAmount": 0,
            "CurrencyCode": "INR",
          },
          "TotalExpense": Object {
            "CurrencyAmount": 118,
            "CurrencyCode": "INR",
          },
          "TransactionType": "Refund",
        },
      ],
      "DebtRecoveryEventList": Array [],
      "PayWithAmazonEventList": Array [],
      "PerformanceBondRefundEventList": Array [],
      "ProductAdsPaymentEventList": Array [
        Object {
          "baseValue": Object {
            "CurrencyAmount": 115.34,
            "CurrencyCode": "USD",
          },
          "invoiceId": "TR1W0B4YB-6",
          "taxValue": Object {
            "CurrencyAmount": 21.91,
            "CurrencyCode": "USD",
          },
          "transactionType": "Charge",
          "transactionValue": Object {
            "CurrencyAmount": 137.25,
            "CurrencyCode": "USD",
          },
        },
      ],
      "RentalTransactionEventList": Array [],
      "ServiceFeeEventList": Array [
        Object {
          "SellerSKU": "FH-REED-16DX",
        },
        Object {
          "FeeList": Array [
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": -1,
                "CurrencyCode": "USD",
              },
              "FeeType": "FBACustomerReturnPerOrderFee",
            },
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": -1.06,
                "CurrencyCode": "USD",
              },
              "FeeType": "FBACustomerReturnPerUnitFee",
            },
            Object {
              "FeeAmount": Object {
                "CurrencyAmount": -0.5,
                "CurrencyCode": "USD",
              },
              "FeeType": "FBACustomerReturnWeightBasedFee",
            },
          ],
          "SellerSKU": "FH-REED-16DX",
        },
      ],
      "ServiceProviderCreditEventList": Array [],
    },
    "NextToken": NextToken {
      "action": "ListFinancialEvents",
      "token": "e21hcmtldHBsYWNlSWQ6bnVsbCxtYXhSZXN1bHRzUGVyUGFnZTowLHNlYXJjaFF1ZXJ5Q2hlY2tzdW06bnVsbCxxdWVyeVBhZ2luYXRpb25Ub2tlbjoidDB3V25MNXFLWkRIZ2p5ZzB3ZHRWODVnV0htVExVMkM0XzlsMHpRMG9HVXFZOVhTdjFyWUNWUE8teGxWRnF3N0ZyaDIyY3lQX0VTOXYxendQNUVvc0t0V1NKM1YyQkRJdWcyWFpXdm1KVmdPVktBdzNIMXUyVHBiTGoxVmRmY3Z6ZlU1WlpNaEpsQ0RKUnYxRk16am13Y1YyQ1BoOXNWMU1xNUZqamxUMlRCeFBkSjdEa3BkbENISElVZ094aHVTN3ZfZlFCUWYyWWJYZ2l3NHNxZXkwNnQyaVBucm5PdnAzRTdKbW4xcnc1UTlaTGV1Ymk5WUV6UGJ6UnhjRmh2VUFKdlQ5U2U3eERIdHVMUzNJVWFRODBubVhja3JLeWt3dVZKeWZXQm5CY3p0bjZTbVRHenJmZ1VOanFMWFFNT2giLHNlYXJjaFF1ZXJ5Om51bGwsdG9rZW5DcmVhdGlvbkRhdGU6MTQ4NTg2MjY5ODI1NCxzZWxsZXJJZDoiQTM1SlMxREpITjdGViJ9",
    },
  },
  Object {
    "quotaMax": 1000,
    "quotaRemaining": 999,
    "quotaResetOn": 2020-04-06T10:22:23.582Z,
    "requestId": "0",
    "timestamp": 2020-05-06T09:22:23.582Z,
  },
]
`;
